--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -1104,6 +1104,7 @@
     <Content Include="Areas\Tiplife\Views\NgacElectrode\_TipwearBeforeChangeGrid.cshtml" />
     <Content Include="Areas\Tiplife\Views\NgacElectrode\_Tipinfo.cshtml" />
     <Content Include="Areas\Alert\Views\L_controlLimits\_ControlLimitsGrid.cshtml" />
+    <Content Include="Areas\Tiplife\Views\NgacElectrode\_TipDressDataGrid.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
     <None Include="Properties\PublishProfiles\VCC22700-Testing.pubxml" />
