--- a/ABBCommTest/App.config
+++ b/ABBCommTest/App.config
@@ -12,7 +12,7 @@
 
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="ABB.log" />
+      <file value="C:\Temp\ABB.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
