changeing alert triggers to work with schedule

--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -231,6 +231,9 @@
     <Compile Include="Areas\Alert\Models\c_datasource.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Alert\Models\c_schedule.cs">
+      <DependentUpon>AlertModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Alert\Models\c_SMSconfig.cs">
       <DependentUpon>AlertModel.tt</DependentUpon>
     </Compile>
