--- a/EqUiDigibordLauncher/EqUiDigibordLauncher.csproj
+++ b/EqUiDigibordLauncher/EqUiDigibordLauncher.csproj
@@ -81,6 +81,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Rel_GA|AnyCPU'">
     <OutputPath>bin\Rel_GA\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DEV_GA|AnyCPU'">
+    <OutputPath>bin\DEV_GA\</OutputPath>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
