--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -7,10 +7,10 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="EntityFramework.MappingAPI" version="6.2.0" targetFramework="net46" />
   <package id="Hangfire" version="1.6.20" targetFramework="net46" />
-  <package id="Hangfire.Console" version="1.4.1" targetFramework="net46" />
+  <package id="Hangfire.Console" version="1.4.2" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.6.20" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.6.20" targetFramework="net46" />
-  <package id="HtmlAgilityPack" version="1.8.8" targetFramework="net46" />
+  <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net46" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="3.3.1" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net451" />
@@ -42,6 +42,7 @@
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="popper.js" version="1.14.3" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="RestSharp" version="106.4.2" targetFramework="net46" />
   <package id="Spin.js" version="2.3.2.1" targetFramework="net46" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net46" />
   <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net46" />
